--- a/action.yml
+++ b/action.yml
@@ -22,16 +22,14 @@ runs:
   using: 'composite'
   steps:
     - name: Execute devenv command
-      shell: zsh {0}
-      run: |
-        # ensure to source
-        if [ -f ~/.zshrc ]; then
-          source ~/.zshrc
-        fi
-
-        if functions devenv > /dev/null; then
+      uses: gbraad-actions/zsh-action@main
+      with:
+        run: |
+          # Check if devenv function exists
+          if ! type devenv >/dev/null 2>&1; then
+            echo "Error: devenv function is not defined. Please make sure to run install first"
+            exit 1
+          fi
+          
+          # Execute devenv command
           devenv ${{ inputs.prefix }} ${{ inputs.command }} ${{ inputs.args }}
-        else
-          echo "Error: devenv function is not defined. Please make sure to run install first"
-          exit 1
-        fi
